报价单信息oracle同步

--- a/WebRoot/ningb/conf/prop/oracle.properties
+++ b/WebRoot/ningb/conf/prop/oracle.properties
@@ -2,7 +2,7 @@
 oracle.username=OAAdmin
 oracle.password=OA123456@
 # Oracle ERP 数据同步到中间表数据接口名称, 多个接口逗号隔开; 例如 GetProduct,GetVendor
-oracle.query.name=GetProduct,GetSeasProduct,GetVendor
+oracle.query.name=GetProduct,GetSeasProduct,GetVendor,GetPoQuoteList
 # Oracle ERP 接口基础配置信息
 # 1.前缀为 oracle.query.接口名称
 # 2.基础数据包括 
@@ -37,3 +37,10 @@ oracle.query.GetVendor.rmiargbean=org.datacontract.schemas._2004._07.MH_EBSOAWcf
 oracle.query.GetVendor.rmiargname=Lastupdate_datetime
 oracle.query.GetVendor.modeid=221
 oracle.query.GetVendor.modecreator=1
+# 报价单信息接口配置
+oracle.query.GetPoQuoteList.rminame=getPoQuoteList
+oracle.query.GetPoQuoteList.primarykey=segment1
+oracle.query.GetPoQuoteList.rmiargbean=org.datacontract.schemas._2004._07.MH_EBSOAWcfService.GetPoQuoteListInfo
+oracle.query.GetPoQuoteList.rmiargname=Lastupdate_datetime
+oracle.query.GetPoQuoteList.modeid=704
+oracle.query.GetPoQuoteList.modecreator=1
