推送报价单数据到oracle

--- a/WebRoot/ningb/conf/prop/oracle.properties
+++ b/WebRoot/ningb/conf/prop/oracle.properties
@@ -39,7 +39,7 @@ oracle.query.GetVendor.modeid=221
 oracle.query.GetVendor.modecreator=1
 # 报价单信息接口配置
 oracle.query.GetPoQuoteList.rminame=getPoQuoteList
-oracle.query.GetPoQuoteList.primarykey=segment1
+oracle.query.GetPoQuoteList.primarykey=po_line_id
 oracle.query.GetPoQuoteList.rmiargbean=org.datacontract.schemas._2004._07.MH_EBSOAWcfService.GetPoQuoteListInfo
 oracle.query.GetPoQuoteList.rmiargname=Lastupdate_datetime
 oracle.query.GetPoQuoteList.modeid=684
