--- a/WebRoot/ningb/conf/prop/hrm.properties
+++ b/WebRoot/ningb/conf/prop/hrm.properties
@@ -1,4 +1,4 @@
-# hrm 考勤配置相关
+﻿# hrm 考勤配置相关
 # 考勤数据调试模式：false.否   true.是
 hrm.debug=true
 # 考勤数据同步考勤机数据源 id
@@ -20,14 +20,14 @@ hrm.schedule.endtime=17:30
 # 考勤打卡信息异常数量
 hrm.schedule.size=100
 # 考勤打卡信息异常提醒用户 id
-hrm.schedule.reminduser=404
+hrm.schedule.reminduser=466
 # 考勤打卡信息异常提醒用户信息
 hrm.schedule.remindmsg=考勤打卡异常
 # 考勤打卡信息是否推送短信提醒标识：true.推送短信   false.不推送短信, 只将需要推送人信息记录到日志中
-hrm.schedule.remindflag=false
+hrm.schedule.remindflag=true
 # 考勤打卡信息早上提醒用户信息模板
 hrm.schedule.remindammsg=温馨提示：%s早上08:30之前无您的考勤数据，请注意办理相关手续；如有其他疑问，可在09:00分后在OA-其他-考勤管理-考勤记录中查看准确考勤信息。
 # 考勤打卡信息晚上提醒用户信息模板
 hrm.schedule.remindpmmsg=温馨提示：%s晚上19:30分前无您的考勤数据，请注意办理相关手续；如19:30分之后已打卡或者其他疑问，可在明早08:00分后OA-其他-考勤管理-考勤记录中查看准确考勤信息。
 # 考勤免打卡人员
-hrm.ignore.users=000001,000075,020047,021200,020431,020432,020357,020984,000052,05MH82
+hrm.ignore.users=000001,000075,020047,021200,020431,020432,020357,020984,000052,05MH82,021492,021560
