考勤报表逻辑修改

--- a/WebRoot/ningb/conf/prop/hrm.properties
+++ b/WebRoot/ningb/conf/prop/hrm.properties
@@ -1,4 +1,4 @@
-﻿# hrm 考勤配置相关
+# hrm 考勤配置相关
 # 考勤数据调试模式：false.否   true.是
 hrm.debug=true
 # 考勤数据同步考勤机数据源 id
@@ -14,7 +14,7 @@ hrm.lactation.modeid=102
 # 考勤数据哺乳假模块考勤类型 id
 hrm.lactation.attendanceid=6
 # 考勤数据默认工作开始时间
-hrm.schedule.starttime=8:00
+hrm.schedule.starttime=8:30
 # 考勤数据默认工作结束时间
 hrm.schedule.endtime=17:30
 # 考勤打卡信息异常数量
