--- a/WebRoot/ningb/conf/prop/hrm.properties
+++ b/WebRoot/ningb/conf/prop/hrm.properties
@@ -14,7 +14,7 @@ hrm.lactation.modeid=102
 # 考勤数据哺乳假模块考勤类型 id
 hrm.lactation.attendanceid=6
 # 考勤数据默认工作开始时间
-hrm.schedule.starttime=8:30
+hrm.schedule.starttime=8:00
 # 考勤数据默认工作结束时间
 hrm.schedule.endtime=17:30
 # 考勤打卡信息异常数量
@@ -26,8 +26,8 @@ hrm.schedule.remindmsg=考勤打卡异常
 # 考勤打卡信息是否推送短信提醒标识：true.推送短信   false.不推送短信, 只将需要推送人信息记录到日志中
 hrm.schedule.remindflag=true
 # 考勤打卡信息早上提醒用户信息模板
-hrm.schedule.remindammsg=温馨提示：%s早上08:30之前无您的考勤数据，请注意办理相关手续；如有其他疑问，可在09:00分后在OA-其他-考勤管理-考勤记录中查看准确考勤信息。
+hrm.schedule.remindammsg=温馨提示：%s早上08:00之前无您的考勤数据，请注意办理相关手续；如有其他疑问，可在09:00分后在OA-其他-考勤管理-考勤记录中查看准确考勤信息。
 # 考勤打卡信息晚上提醒用户信息模板
 hrm.schedule.remindpmmsg=温馨提示：%s晚上19:30分前无您的考勤数据，请注意办理相关手续；如19:30分之后已打卡或者其他疑问，可在明早08:00分后OA-其他-考勤管理-考勤记录中查看准确考勤信息。
 # 考勤免打卡人员
-hrm.ignore.users=000001,000075,020047,021200,020431,020432,020357,020984,000052,05MH82,021492,021560
+hrm.ignore.users=000001,000006
