订购会新品流程和台账

--- a/WebRoot/ningb/conf/prop/erp.properties
+++ b/WebRoot/ningb/conf/prop/erp.properties
@@ -1,6 +1,6 @@
 # Oracle ERP 集成相关
-erp.username=ERPOATest
-erp.password=ERPOATest@123456
+erp.username=ERPOAadmin
+erp.password=ERPOAadmin@123456
 # Oracle ERP 数据同步到中间表数据接口名称, 多个接口逗号隔开; 例如 GetProduct,GetVendor
 erp.query.name=
 # Oracle ERP 接口基础配置信息
