订购会新品流程

--- a/WebRoot/ningb/conf/prop/oracle.properties
+++ b/WebRoot/ningb/conf/prop/oracle.properties
@@ -2,7 +2,7 @@
 oracle.username=OAAdmin
 oracle.password=OA123456@
 # Oracle ERP 数据同步到中间表数据接口名称, 多个接口逗号隔开; 例如 GetProduct,GetVendor
-oracle.query.name=GetProduct,GetSeasProduct,GetVendor,GetPoQuoteList
+oracle.query.name=GetProductV2,GetSeasProduct,GetVendor,GetPoQuoteList
 # Oracle ERP 接口基础配置信息
 # 1.前缀为 oracle.query.接口名称
 # 2.基础数据包括 
@@ -21,6 +21,13 @@ oracle.query.GetProduct.rmiargbean=org.datacontract.schemas._2004._07.MH_EBSOAWc
 oracle.query.GetProduct.rmiargname=Lastupdate_datetime
 oracle.query.GetProduct.modeid=181
 oracle.query.GetProduct.modecreator=1
+# 物料主信息接口配置V2
+oracle.query.GetProductV2.rminame=getProductV2
+oracle.query.GetProductV2.primarykey=STANDARD_ITEM_ID
+oracle.query.GetProductV2.rmiargbean=org.datacontract.schemas._2004._07.MH_EBSOAWcfService.GetProductInfo
+oracle.query.GetProductV2.rmiargname=Lastupdate_datetime
+oracle.query.GetProductV2.modeid=181
+oracle.query.GetProductV2.modecreator=1
 # 物料海外信息接口配置
 oracle.query.GetSeasProduct.rminame=getSeasProduct
 oracle.query.GetSeasProduct.primarykey=standard_item_id,org_id
