自动创建oracle账号

--- a/WebRoot/ningb/conf/prop/hrm.properties
+++ b/WebRoot/ningb/conf/prop/hrm.properties
@@ -26,8 +26,8 @@ hrm.schedule.remindmsg=考勤打卡异常
 # 考勤打卡信息是否推送短信提醒标识：true.推送短信   false.不推送短信, 只将需要推送人信息记录到日志中
 hrm.schedule.remindflag=true
 # 考勤打卡信息早上提醒用户信息模板
-hrm.schedule.remindammsg=温馨提示：%s早上08:00之前无您的考勤数据，请注意办理相关手续；如有其他疑问，可在09:00分后在OA-其他-考勤管理-考勤记录中查看准确考勤信息。
+hrm.schedule.remindammsg=温馨提示：%s早上08:20之前无您的考勤数据(如已打卡请忽略)，请注意办理相关手续；如有其他疑问，可在09:00分后在OA-其他-考勤管理-考勤记录中查看准确考勤信息。
 # 考勤打卡信息晚上提醒用户信息模板
-hrm.schedule.remindpmmsg=温馨提示：%s晚上20:00分前无您的考勤数据，请注意办理相关手续；如20:00分之后已打卡或者其他疑问，可在明早08:00分后OA-其他-考勤管理-考勤记录中查看准确考勤信息。
+hrm.schedule.remindpmmsg=温馨提示：%s晚上18:45分前无您的考勤数据(如已打卡请忽略)，请注意办理相关手续；如18:45分之后已打卡或者其他疑问，可在明早08:00分后OA-其他-考勤管理-考勤记录中查看准确考勤信息。
 # 考勤免打卡人员
 hrm.ignore.users=000001,000006
