修改资金账户管理，合同尾数清理表，产品认证制作申请表

--- a/WebRoot/ningb/conf/prop/oracle.properties
+++ b/WebRoot/ningb/conf/prop/oracle.properties
@@ -2,7 +2,7 @@
 oracle.username=OAAdmin
 oracle.password=OA123456@
 # Oracle ERP 数据同步到中间表数据接口名称, 多个接口逗号隔开; 例如 GetProduct,GetVendor
-oracle.query.name=GetProductV2,GetSeasProduct,GetVendor,GetPoQuoteList
+oracle.query.name=GetProductV2,GetSeasProduct,GetVendor,GetPoQuoteList,GetGimmickDataV2
 # Oracle ERP 接口基础配置信息
 # 1.前缀为 oracle.query.接口名称
 # 2.基础数据包括 
@@ -14,7 +14,7 @@ oracle.query.name=GetProductV2,GetSeasProduct,GetVendor,GetPoQuoteList
 #	6.rmifiltervalue (调用接口过滤掉指定值的字段值), 支持多个, 多个逗号隔开
 #	5.modeid (OA 中表单建模模块 id)
 #	6.modecreator(OA 中创建同步数据人员 id)
-# 物料主信息接口配置
+# 物料主信息接口配置 
 oracle.query.GetProduct.rminame=getProduct
 oracle.query.GetProduct.primarykey=standard_item_id
 oracle.query.GetProduct.rmiargbean=org.datacontract.schemas._2004._07.MH_EBSOAWcfService.GetProductInfo
@@ -28,6 +28,13 @@ oracle.query.GetProductV2.rmiargbean=org.datacontract.schemas._2004._07.MH_EBSOA
 oracle.query.GetProductV2.rmiargname=Lastupdate_datetime
 oracle.query.GetProductV2.modeid=181
 oracle.query.GetProductV2.modecreator=1
+# 唛头确认任务列表 
+oracle.query.GetProduct.rminame=GetGimmickDataV2
+oracle.query.GetProduct.primarykey=number01
+oracle.query.GetProduct.rmiargbean=org.datacontract.schemas._2004._07.MH_EBSOAWcfService.GetGimmickData
+oracle.query.GetProduct.rmiargname=Lastupdate_datetime
+oracle.query.GetProduct.modeid=11463
+oracle.query.GetProduct.modecreator=1
 # 物料海外信息接口配置
 oracle.query.GetSeasProduct.rminame=getSeasProduct
 oracle.query.GetSeasProduct.primarykey=standard_item_id,org_id
