--- a/WebRoot/ningb/conf/prop/hrm.properties
+++ b/WebRoot/ningb/conf/prop/hrm.properties
@@ -22,12 +22,12 @@ hrm.schedule.size=100
 # 考勤打卡信息异常提醒用户 id
 hrm.schedule.reminduser=492
 # 考勤打卡信息异常提醒用户信息
-hrm.schedule.remindmsg=考勤打卡异常
+hrm.schedule.remindmsg=??????
 # 考勤打卡信息是否推送短信提醒标识：true.推送短信   false.不推送短信, 只将需要推送人信息记录到日志中
 hrm.schedule.remindflag=true
 # 考勤打卡信息早上提醒用户信息模板
-hrm.schedule.remindammsg=温馨提示：%s早上08:20之前无您的考勤数据(如已打卡请忽略)，请注意办理相关手续；如有其他疑问，可在09:00分后在OA-其他-考勤管理-考勤记录中查看准确考勤信息。
+hrm.schedule.remindammsg=?????%s??08\:20?????????(???????)????????????????????09\:00???OA-??-????-??????????????
 # 考勤打卡信息晚上提醒用户信息模板
-hrm.schedule.remindpmmsg=温馨提示：%s晚上18:45分前无您的考勤数据(如已打卡请忽略)，请注意办理相关手续；如18:45分之后已打卡或者其他疑问，可在明早08:00分后OA-其他-考勤管理-考勤记录中查看准确考勤信息。
+hrm.schedule.remindpmmsg=?????%s??18\:45?????????(???????)????????????18\:45?????????????????08\:00??OA-??-????-??????????????
 # 考勤免打卡人员
 hrm.ignore.users=000001,000006
